--- a/.github/workflows/worldskills_apply.yml
+++ b/.github/workflows/worldskills_apply.yml
@@ -19,7 +19,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Terraform Plan
+      - name: Terraform Init
         id: init
         run: terraform init
         continue-on-error: true
